# Sak-Family-Agent

./: .env.example  .gitignore  .gitleaks.toml  .textlintignore  2023-10-27_100000-project-structure-refactor.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Care.md  Dockerfile.sandbox  GEMINI.md  Joy.md  LABELER_TEST.md  LICENSE  Makefile  ONBOARDING.md  PLAN.md  README.md  SAKTHAI.md  SECURITY.md  SKILL.md  SOUL.md  SYNC_GUIDE.md  Trust.md  analyze_portfolio.py  apply_all_fixes.py  apply_store_v3.py  architecture_diagram.mmd  author_bio.md  compare_portfolio_to_benchmark.py  continuous-security.yml  cover_letter.md  coverage.xml  cycle_diagram.mmd  fetch_stock_data.py  finalize_skills.py  fix_client.py  get_request_executor.txt  health_fix.diff  (+26 more)
.Jules/: README.md  palette.md  sentinel.md
.claude/: settings.json
.gemini/: settings.json
.githooks/: pre-commit
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: SKILL.md  agent-self-evolution.yml  asset-monitor.yml  auto-dependency-update.yml  ci.yml  codacy.yml  dependency-audit.yml  greetings.yml  label.yml  labeler.yml  msvc.yml  ossar.yml  pages.yml  pylint.yml  run-evals.yml  run_asset_monitor.py  secret-scan.yml  sonarcloud.yml  stale.yml  super-linter.yml  test_asset_monitor.py  verify-assets.yml
.hypothesis/constants/: 00a1fab360f1339a  023b78b67b4c61ab  07213c6c5a4764c1  09583eecad4576be  0a1834933584f44e  0b6724185089344e  0f0bc96269cc18fe  0f273a60b4626efe  0f95391d4d7f0d2a  17185ff2f9073191  1ef1aea907b392eb  2133edb71dfc476d  223c1947faaa3b19  293bc0fa380dc021  2a143e281a6ede34  2ab57916fc87d79e  2af2e4f9ee5897f2  2b334850adf3636c  3a0cbe0e7a975e7d  3ae209ec46a1e3f5  3f0e5456821bcd03  3f6be00d216111f1  443b06a59c3defbb  4703a8e5d5e76e61  471776c7c7a196ba  4933dd54d872031a  4a24ed236ad6f46b  4a3a58b938ebc2d0  4b7cd5914f5211a7  500b77e5195b6189  53f47716c4093fab  5723bc9682bf008a  5ff20a3f6bfacad3  63957f8c12b4105f  63a0afe730008417  63ce014ce0a20f52  663e8f9171f2112b  6b39dc731c769b2d  70fdb0ea5e600e54  711a86fe2ec1ed32  (+48 more)
.hypothesis/tmp/: tmp3k3kds1o  tmpnogvrxzh  tmpomxdq9t8  tmptj_wg7ah  tmpyvomqg0t
.jules/: bolt.md  sentinel.md
.omp/state/: approval.json  mode.json  rules.json
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
dashboard/src/: App.jsx  App.test.jsx  main.js  style.css
default/: SOUL.md  config.yaml
docs/: CONTRIBUTING.md  README.md  SECURITY.md  SOUL.md  agent-diagnosis.md  audit-2026-07-04.md  plugins.md  runtimes.md  sakthai-live-connect-plan.md  security-hardening.md  security_audit_2026-07-11.md  security_audit_2026-07-12.md  skill-naming.md  uf-release-checklist.md  workspace.md
docs/cycle/: Care.md  Dream.md  Growth.md  Hope.md
docs/portfolio_and_papers/: references.bib  value_driven_architecture.tex
docs/servicequotebot/: deployment.md
env-templates/: .env.example
evaluation_tasks/: json_key_check.yaml  json_numerical_range_check.yaml  utils.py  yaml_key_check_dataset.jsonl  yaml_validity.yaml
evolution/skills/: evolve_skill.py
infra/hermes-agents/: MIGRATION.md  README.md  SYNC_GUIDE.md  deploy.py  doctor.py
infra/pw-poc/: README.md  open-signed-in.js  package-lock.json  package.json  show-chrome.js  signin-chrome.js
infra/sakthai-training-space/: Dockerfile  README.md  generate_sft_dataset.py  upload_dataset.py
infra/vm-agents/: README.md  sakthai-agent-run.sh
personas/: README.md
personas/sakjules/: HANDOFF.md  PLAN.md  SOUL.md
personas/sakking/: SOUL.md
personas/saksee/: SKILL-AUDIT-2026-07-05.md  SOUL.md
personas/saksit/: README.md  SOUL.md
personas/saktan/: PLAN.md  SOUL.md
personas/sakthai/: SOUL.md
product/: PLAN.md  decision.md  todo.md
profiles/hermesagent/: SOUL.md  config.yaml
profiles/saksit/: config.yaml
profiles/sakthai/: SOUL.md  config.yaml
sakthai/: auth.py  config.py  finance.py  skills.py
sakthai/agent/: context_filter.py  context_manager.py  guardrails.py  loop.py  prompt_builder.py  test_guardrails.py  tools.py
sakthai/cli/: __init__.py  agent.py  cycle.py  dashboard.py  eval.py  extensions.py  memory.py  skills.py  system.py
sakthai/cloud/: runtime.py
sakthai/cycle/: stages.py  state.py
sakthai/dashboard/: app.py  data.py  test_dashboard_data_collector.py
sakthai/extensions/: __init__.py  install.py
sakthai/learn/: __init__.py  capture.py  (+1 more)
sakthai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scratch/: PLAN.md.bak  load_demo_metrics.py  test_guardrails.py  untitled_prompt.py
scripts/: __init__.py  bootstrap.ps1  compose_persona.py  diagnose_personas.py  export_agent_repo.py  regenerate-supermemory-canonicals.py  rename_skills.py  run_eval_loop.py  serve_api.py  setup_servicequotebot.py  setup_vm_telegram_agents.py  verify_headers.py  verify_vm_telegram_agents.py
shared/: agents-roster.md
skills/: .gitkeep  .usage.json  README.md
systemd/: hermes-gateway-hermesagent.service
test/: test_report.md
tests/: conftest.py  security_audit.py  test_agent_loop.py  test_agent_loop_failure_seams.py  test_auth.py  test_chat.py  test_cli.py  test_cli_consolidate_sessions.py  test_cli_eval.py  test_cli_system.py  test_cloud.py  test_compose_persona.py  test_config_reports.py  test_context_filter.py  test_context_manager.py  test_cycle_skills_config.py  test_cycle_state.py  test_dashboard_app.py  test_dashboard_data.py  test_dashboard_sessions.py  test_eval.py  test_export_agent_repo.py  test_extensions.py  test_giturl.py  test_guardrails.py  test_guardrails_containers.py  test_guardrails_destructive.py  test_guardrails_env_leak.py  test_guardrails_hardened.py  test_guardrails_nested_args.py  test_guardrails_normalization.py  test_guardrails_redirection.py  test_guardrails_regex.py  test_guardrails_relative_roots.py  test_guardrails_sentinel.py  test_guardrails_sentinel_bypasses.py  test_guardrails_wrappers.py  test_hf.py  test_integration.py  test_lead_capture.py  (+47 more)
web-dashboard/: README.md  ideas.md  package.json  template.json  tsconfig.json  vite.config.ts
(+1421 files in other folders)
