[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sakthai-agent"
version = "2.0.0"
description = "Personal learning agent — persistent SQLite memory, explicit fact capture, a Claude/Gemini agent loop, and an MCP stdio server."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "beer-sakthai" }]
dependencies = [
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "anthropic>=0.40,<1.0",
    "httpx>=0.20.0",
    "google-genai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
]

[project.scripts]
sakthai = "sakthai.cli:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
source = ["sakthai"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
files = ["sakthai"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B606", "B607"]

[tool.setuptools.packages.find]
include = ["sakthai*"]
exclude = ["tests*"]
